2001-04-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-tax-info.c: implement tax info api

	* src/gnome/account-tree.c: same as below

	* src/gnome/window-acct-tree.c: add tax info field

	* src/scm/report.scm: add an export callback for reports

	* src/guile/gnc.gwp: wrap radio chooser api

	* src/scm/report/taxtxf.scm: use export callback to choose
	between html & txf

	* src/gnome/window-report.c: implement export callback

2001-04-18  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c: fix for api change below

	* src/gnc-ui.h: api change below

	* src/gnome/query-user.c
	(gnc_choose_radio_option_dialog_parented): use glist instead of
	pointer array for list of strings argument

2001-04-18  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-options.c: don't destroy options dialog twice.

	* src/gnome/window-main.c: hopefully last MDI fixes; rearrange 
	menu and replace "New Window" with "Move to New Window."

2001-04-18  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_ui_account_get_balance): use current
	stock quotes to get balances for stock/mutual/currency accounts

	* src/gnome/window-main.c: check for NULL toolbar parents

	* src/engine/sixtp-xml-write-utils.c: use new func below

	* src/engine/sixtp-dom-generators.c (timespec_sec_to_string): use
	new func below.

	* src/engine/sixtp-utils.c (timespec_secs_to_given_string): new
	func. format timezone string by hand (solaris fix)

	* src/engine/gnc-account-xml-v2.c (gnc_account_end_handler): only
	begin editing the account if parsing was successful

	* src/test/test-xml-account.c (test_add_account): don't delete
	the account, because it's referenced by the parser after the
	callback.

2001-04-17  Bill Gribble  <grib@billgribble.com>

	* src/gnome/window-main.c: More changes for MDI.  I think we
	finally have toolbars handled right.  Also new windows for account
	trees.

2001-04-17  Rob Browning  <rlb@cs.utexas.edu>
